docs(spring): 按整改意见重构正文目录与内容
结构调整（10 章，61 个文件，21356 行）：
- 01-core: chapter-01 从63行扩充至158行
- 02-web: 新增 REST 设计(441行)、全局异常处理(349行)，interceptor/file-upload 扩充
- 03-data-access: JPA 204→390行，事务 234→386行，新增 MyBatis vs JPA 选型
- 04-spring-boot: starter 180→298行，config 202→272行，actuator 579→228行(移出可观测性)，build-deploy 166→274行
- 05-security: authentication 238→510行，authorization 233→506行，practice 192→382行
- 06-observability: 新建目录（日志329行/指标321行/追踪206行/排查288行）
- 07-async-and-messaging: 从06-advanced重组，scheduling+quartz合并647行
- 08-testing: unit-test 205→588行，integration 220→415行，testcontainers 205→409行，新增API测试233行
- 09-distributed: 从06-advanced+07-microservices重组（6个文件）
- 10-production: 新建目录（连接池调优/Docker/GraalVM/CI-CD）

删除过时内容：
- 06-advanced/i18n(175行)、mail(232行)、spring-batch(201行)
- 06-advanced 整目录（内容已迁移）
- 07-microservices 整目录（内容已迁移至09-distributed）